// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiAssoDtoAdapter rnaDocumentToDocument should set date to 01/01 of year if time is not define 1`] = `
Object {
  "__meta__": Object {},
  "nom": Object {
    "last_update": 2021-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "PV - ididididid",
  },
  "type": Object {
    "last_update": 2021-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "PV",
  },
  "url": Object {
    "last_update": 2021-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "/fake/url",
  },
}
`;

exports[`ApiAssoDtoAdapter rnaDocumentToDocument should set date to 01/01/1970 if year is not define 1`] = `
Object {
  "__meta__": Object {},
  "nom": Object {
    "last_update": 1970-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "PV - ididididid",
  },
  "type": Object {
    "last_update": 1970-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "PV",
  },
  "url": Object {
    "last_update": 1970-01-01T00:00:00.000Z,
    "provider": "RNA",
    "type": "string",
    "value": "/fake/url",
  },
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return rna association 1`] = `
Object {
  "adresse_siege_rna": undefined,
  "code_objet_social_1": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "code_objet_social_2": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "date_creation_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 1994-07-04T00:00:00.000Z,
    },
  ],
  "date_modification_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 2018-01-01T00:00:00.000Z,
    },
  ],
  "denomination_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "TEST",
    },
  ],
  "objet_social": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "W00000000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return rna association with adresse 1`] = `
Object {
  "adresse_siege_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": "paris",
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "code_objet_social_1": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "code_objet_social_2": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "date_creation_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 1994-07-04T00:00:00.000Z,
    },
  ],
  "date_modification_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 2018-01-01T00:00:00.000Z,
    },
  ],
  "denomination_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "TEST",
    },
  ],
  "objet_social": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "W00000000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return rna association with date creation 1`] = `
Object {
  "adresse_siege_rna": undefined,
  "code_objet_social_1": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "code_objet_social_2": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "date_creation_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 1906-07-15T00:00:00.000Z,
    },
  ],
  "date_modification_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 2018-01-01T00:00:00.000Z,
    },
  ],
  "denomination_rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "TEST",
    },
  ],
  "objet_social": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "rna": Array [
    Object {
      "last_update": 2018-01-01T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "W00000000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return siren association 1`] = `
Object {
  "adresse_siege_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": "paris",
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "categorie_juridique": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "9220",
    },
  ],
  "date_creation_siren": undefined,
  "date_modification_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 2010-01-01T00:00:00.000Z,
    },
  ],
  "denomination_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "TEST SIREN 2",
    },
  ],
  "etablisements_siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Array [
        "50922194100000",
        "50922194100001",
      ],
    },
  ],
  "nic_siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "0000",
    },
  ],
  "siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "509221941",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return siren association with date creation 1`] = `
Object {
  "adresse_siege_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": "paris",
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "categorie_juridique": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "9220",
    },
  ],
  "date_creation_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 1906-07-15T00:00:00.000Z,
    },
  ],
  "date_modification_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 2010-01-01T00:00:00.000Z,
    },
  ],
  "denomination_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "TEST SIREN 2",
    },
  ],
  "etablisements_siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Array [
        "50922194100000",
        "50922194100001",
      ],
    },
  ],
  "nic_siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "0000",
    },
  ],
  "siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "509221941",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toAssociation should return siren association without nom siren 1`] = `
Object {
  "adresse_siege_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": "paris",
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "categorie_juridique": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "9220",
    },
  ],
  "date_creation_siren": undefined,
  "date_modification_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 2010-01-01T00:00:00.000Z,
    },
  ],
  "denomination_siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "TEST",
    },
  ],
  "etablisements_siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Array [
        "50922194100000",
        "50922194100001",
      ],
    },
  ],
  "nic_siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "0000",
    },
  ],
  "siren": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "509221941",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with contact 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with rib 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [],
  "information_banquaire": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "bic": "BIC_TEST",
          "iban": "TEST",
        },
      },
    ],
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "bic": "BIC_TEST 2",
          "iban": "TEST 2",
        },
      },
    ],
  ],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without contact 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": undefined,
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": undefined,
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without rib 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [],
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;
